syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message GachaUpInfo {
	uint32 item_parent_type = 1;
	repeated uint32 item_id_list = 2;
}
